# fpt_openassetio_manager

./: .editorconfig  NOTICE  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: example_openassetio_config.toml
plugin/fpt_openassetio_manager/: FPTManagerInterface.py  __init__.py
plugin/fpt_openassetio_manager/ui/: FPTUIInterface.py  __init__.py
tests/: business_logic_suite.py  conftest.py  fixtures.py  requirements.txt  test_manager.py
